<resources>
    <string name="app_name">Tabfragmentpractice3</string>
    <string name="tab_text_1">Tab1</string>
    <string name="tab_text_2">Tab2</string>
    <string name="tab_text_3">Tab3</string>
    <string name="tab_text_4">Tab4</string>
    <string name="tab_text_5">Tab5</string>
    <string name="tab_text_6">Tab6</string>
    <string name="tab_text_7">Tab7</string>
    <string name="tab_text_8">Tab8</string>
    <string name="tab_text_9">Tab9</string>
    <string name="tab_text_10">Tab10</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
